# rook_wasteland

./: .gitignore  README.md  make.py
apps/rw_defender/: .gitignore  Cargo.toml  README.md  Trunk.toml  build_prompt.md  index.html  make.py
apps/rw_defender/doc/: background_images.md  defender_spec.md  game_implementation_state.md  principles_and_lessons.md
apps/rw_defender/src/: game.rs  lib.rs  renderer.rs
apps/rw_defender/src/entities/: entity.rs  mod.rs
apps/rw_defender/src/game/: constants.rs  mod.rs  player.rs  render.rs  update.rs
apps/rw_defender/src/graphics/: background.rs  colors.rs  mod.rs  sprite.rs
apps/rw_defender/src/systems/: input.rs  mod.rs
apps/rw_defender/src/utils/: math.rs  mod.rs
apps/rw_defender/src/weapons/: mod.rs
apps/rw_defender/tasks/: task_01_phase1_core_engine.md  task_02_boss_background_highscore.md  task_03_ship_size_lives_overhaul.md
apps/rw_defender/tools/: Cargo.toml
apps/rw_defender/tools/src/: main.rs
apps/rw_mixit/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  make.py
apps/rw_mixit/.github/: copilot-instructions.md
apps/rw_mixit/doc/: ascii_wireframes.md  implementation_lessons_and_notes.md  implementation_plan.md  leptos_technical_design_principles_and_api_practices.md  rust_code_principles.md  rw_mixit_spec.md  rw_mixit_tech_spec.md  task_workflow.md
apps/rw_mixit/features/: feature_001_scratch_realism_improvement.md  feature_002_compact_responsive_layout.md  feature_003_in_app_user_guide.md  feature_004_waveform_scrub_seek.md
apps/rw_mixit/src/: app.rs  lib.rs  routing.rs
apps/rw_mixit/src/audio/: bpm.rs  context.rs  deck_audio.rs  loader.rs  mixer_audio.rs  mod.rs
apps/rw_mixit/src/canvas/: mod.rs  platter_draw.rs  raf_loop.rs  waveform_draw.rs
apps/rw_mixit/src/components/: about.rs  controls.rs  deck.rs  eq.rs  fx_panel.rs  header.rs  help.rs  hot_cues.rs  loop_controls.rs  mixer.rs  mod.rs  settings.rs  (+1 more)
apps/rw_mixit/static/: style.css
apps/rw_mixit/tasks/: 01.code_quality_cleanup.md  feature-001-scratch-realism.md  m0-t0-1-cargo-init.md  m0-t0-2-trunk-index.md  m0-t0-3-lib-entry.md  m0-t0-4-routing.md  m0-t0-5-app-component.md  m0-t0-6-header.md  m0-t0-7-deck-mixer-shells.md  m0-t0-8-css-fonts.md  m1-t1-1-cargo-deps.md  m1-t1-2-deck-state.md  m1-t1-3-mixer-state.md  m1-t1-4-audio-context.md  m1-t1-5-audio-deck.md  m1-t1-6-loader.md  m1-t1-7-deck-component.md  m10-keyboard-shortcuts.md  m12-compact-responsive-layout.md  m2-t2-1-3-audiodeck-playback-methods.md  m3-t3-1-6-platter-animation-speed-control.md  m4-t4-1-6-bpm-detection-sync.md  standalone-feature-004-waveform-scrub-seek.md
apps/rw_mixit/tests/: bpm_real_tracks.rs
apps/rw_poetry/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  make.py
apps/rw_poetry/bugs/: bug_01_pouring_through_poems.md  bug_02_recordings_view_signal_usage.md  bug_03_playback_ux.md  bug_04_playback_time.md
apps/rw_poetry/doc/: building.md  leptos_technical_design_principles_and_api_practices.md  poetry_spec.md  tasks_plan.md
apps/rw_poetry/features/: 01.routing.md
apps/rw_poetry/scripts/: build_poems_index.py
apps/rw_poetry/src/: app.rs  main.rs  routing.rs
apps/rw_poetry/style/: main.css
apps/rw_poetry/tasks/: 2026-03-02-t01-project-scaffold.md  2026-03-02-t02-data-types-poem-repository.md  2026-03-02-t03-app-shell-routing-topbar.md  2026-03-02-t04-poem-reader-view.md  2026-03-02-t06-indexeddb-store-module.md  2026-03-02-t07-audio-capture-module.md  2026-03-02-t08-recording-controls-ui.md  2026-03-02-t09-recordings-list-view.md  2026-03-02-t10-audio-player-component.md  2026-03-02-t11-recording-detail-view.md  2026-03-02-t12-error-handling-completeness.md  2026-03-02-t13-accessibility-pass.md  2026-03-02-t14-dark-mode-polish-acceptance.md
apps/rw_sixzee/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  make.py  package-lock.json  package.json  playwright.config.ts
apps/rw_sixzee/.github/: copilot-instructions.md
apps/rw_sixzee/assets/: grandma_quotes.json  grandma_worker.js
apps/rw_sixzee/bugs/: 001-yz-label-should-be-6z.md  bug_001_trunk-hook-output-wiped-by-distribution.md  bug_002_settings-aria-label-untracked-signal.md  bug_003_grandma-quote-inline-literal-text.md  bug_004_settings-blocked-by-opening-quote-overlay.md
apps/rw_sixzee/doc/: grandma_soul.md  lessons.md  prd.md  project_plan.md  tech_spec.md  wireframes.md
apps/rw_sixzee/e2e/: smoke.spec.ts
apps/rw_sixzee/features/: feature_001_quit_game_mid_progress.md  feature_002_abyssal_depths_theme.md
apps/rw_sixzee/offline/: Cargo.toml
apps/rw_sixzee/src/: app.rs  error.rs  lib.rs  router.rs
apps/rw_sixzee/style/: main.css
apps/rw_sixzee/tasks/: m10-polish-mobile.md  m2-t1-scoring-engine.md  m4-t1-dp-precomputation.md  m5-001-core-game-ui.md  m5-002-quit-game.md  m7-ask-grandma.md  m8-abyssal-depths-theme.md  m8-themes.md  m9-history-screen.md
apps/rw_sixzee/tests/: integration.rs
apps/rw_teleidoscope/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  make.py
apps/rw_teleidoscope/.github/: copilot-instructions.md
apps/rw_teleidoscope/bugs/: m2-01-bug-shader-render-bug.md  m8-01-bug-console-error.md  m8-02-bug-export-empty-image.md
apps/rw_teleidoscope/doc/: lessons.md  prd.md  project_plan.md  tech_spec.md  wireframes.md
apps/rw_teleidoscope/features/: feature_001_mobile_responsive_layout.md
apps/rw_teleidoscope/src/: app.rs  camera.rs  lib.rs  routing.rs  utils.rs
apps/rw_teleidoscope/style/: main.css
apps/rw_teleidoscope/tasks/: m1-scaffold.md  m10-01-steampunk-polish.md  m11-mobile-responsive-layout.md  m2-webgl-renderer.md  m3-t1-image-input.md  m4-1-mirror-symmetry.md  m5-visual-effects.md  m6-t1-color-transforms.md  m7-t1-camera-input.md  m8-t1-export.md  m9-01-randomize.md
apps/rw_teleidoscope/tests/: integration.rs  m11_mobile_layout.rs  m3_image_input.rs  m4_mirror_symmetry.rs  m8_export.rs  m9_randomize.rs  scaffold.rs
rw_serve/: .gitignore  Cargo.toml  README.md
rw_serve/doc/: rw_serve_spec.md
rw_serve/src/: cli.rs  lib.rs  main.rs  router.rs  tls.rs
rw_serve/tests/: integration.rs
(+1239 files in other folders)
