[package]
name = "rw_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5.60", features = ["derive"] }
rcgen = { version = "0.14.7", features = ["pem"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.26.0"
tower = { version = "0.5.3", features = ["util"] }
