[package]
name = "rw_sixzee_offline"
version = "0.1.0"
edition = "2021"

# Standalone binary — no workspace, no WASM, pure Rust std only.
# Run `cargo run --release` from this directory to regenerate generated/v_col.rs.

[[bin]]
name = "dp_solver"
path = "src/main.rs"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
